[Gtk] Webkit fails to build with --disable-geolocation https://bugs.webkit.org/show_bug.cgi?id=81451

Patch by Zan Dobersek <zandobersek@gmail.com> on 2012-03-23
Reviewed by Benjamin Poulain.

Wrap uses of WebCore::Geolocation in WebKitGeolocationPolicyDecision
and WebKitWebView in ifdefs, removing compilation errors when compiling
with geolocation support disabled. Affected public API methods are then
stubs, throwing a warning that feature was not enabled at compile-time.

* webkit/webkitgeolocationpolicydecision.cpp:
(_WebKitGeolocationPolicyDecisionPrivate):
(webkit_geolocation_policy_decision_new):
(webkit_geolocation_policy_allow):
(webkit_geolocation_policy_deny):
* webkit/webkitgeolocationpolicydecisionprivate.h:
* webkit/webkitwebview.cpp:
(webkit_web_view_init):

Canonical link: https://commits.webkit.org/99400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111915 268f45cc-cd09-0410-ab3c-d52691b4dbfc